--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.github.AmbitiousLiu</groupId>
-    <artifactId>JControl-spring-boot-starter</artifactId>
+    <groupId>io.github.ambitiousliu</groupId>
+    <artifactId>jcontrol-spring-boot-starter</artifactId>
     <version>1.0.0.RELEASE</version>
 
     <properties>
