--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,7 @@
     <!-- 开发者信息 -->
     <developers>
         <developer>
-            <name>Ambitious Liu</name>
+            <name>AmbitiousLiu</name>
             <email>ambitiousliu@outlook.com</email>
             <url>https://github.com/AmbitiousLiu</url>
         </developer>
@@ -140,11 +140,11 @@
             <distributionManagement>
                 <snapshotRepository>
                     <id>ossrh</id>
-                    <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+                    <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
                 </snapshotRepository>
                 <repository>
                     <id>ossrh</id>
-                    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+                    <url>https://s01.oss.sonatype.org/content/repositories/releases/</url>
                 </repository>
             </distributionManagement>
         </profile>
